--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_QUESTION_API="https://opentdb.com/"
 REACT_APP_API_PHP="api.php?"
+REACT_APP_API_KEY_NINJA="ApCU7uTmx9K1gsPBOxNqyg==7Lq9F9EORJh7T4Ae"
